--- a/vignettes/references.bib
+++ b/vignettes/references.bib
@@ -1,8 +1,9 @@
-@article{Adepeju2019,
-  title = {Anchored k-medoids: A novel adaptation of k-means further refined to measure inequality in the exposure to crime across micro places},
+@article{Adepeju2021,
+  title = {Anchored k-medoids: A novel adaptation of k-medoids further refined to measure inequality in the exposure to crime across micro places},
   author = {M. Adepeju and S. Langton and J. Bannister},
-  year = {2020},
-  journal={Revised}
+  year = {2021},
+  journal={Journal of Computational Social Science},
+  doi={10.1007/s42001-021-00103-1}
   },
 
   @article{Andresen2017,
