--- a/README.Rmd
+++ b/README.Rmd
@@ -135,13 +135,14 @@ simulated_long <- data.frame(cbind(simulated_long,
 #re-order levels
 simulated_long$Time <- factor(simulated_long$Time, 
                                 levels = c(1:21))
-options(rgl.useNULL = TRUE)
-ggplot(simulated_long, aes(x = Time, y = value, group=ID, color=Groups)) +
+prt <- ggplot(simulated_long, aes(x = Time, y = value, group=ID, color=Groups)) +
   geom_point(size=0.5) + 
   geom_line() +
   scale_color_manual(values=c('#999999','#E69F00', '#56B4E9')) +
   theme_light()
 
+options(rgl.useNULL = TRUE)
+print(prt)
 ```
 
 ### Performing clustering using `akmedoids`
