--- a/paper.bib
+++ b/paper.bib
@@ -20,7 +20,7 @@
 
 @article{Tarpey:2003,
   title={Clustering functional data},
-  author={Tarpey, T. and Kinateder, K.K.J.},
+  author={Tarpey, T. and Kinateder, K.K.},
   journal={Journal of Classification},
   volume=20,
   pages={93-114},
